# OpenPNL

./: .git-cvs  Makefile.am  Makefile.in  Makefile.incl  aclocal.m4  changes.txt  conf.gcc.tbz  conf.icc.tbz  conf.tbz  configure  configure.gcc  configure.icc  configure.in  libtool  mkall  pnlLicense.doc  pnlLicense.txt  readme.txt  zingorn  zingorn.h  zingorn2
c_pgmtk/examples/: Makefile.am  Makefile.in  Makefile.sh
c_pgmtk/examples/Data/: Makefile.am  Makefile.in  cases  casesArHMM  casesTab  samplesFoWS
c_pgmtk/examples/ex_inf_learn_dbn/: Makefile.in
c_pgmtk/examples/ex_param/: Makefile.in
c_pgmtk/examples/gibbs/: Makefile.in
c_pgmtk/examples/inf_learn_bnet/: Makefile.in
c_pgmtk/examples/learn_param/: Makefile.in
c_pgmtk/examples/linux_test/: Makefile.am  Makefile.in  test_run.cpp
c_pgmtk/examples/mixture_gaussian_bnet/: Makefile.am  Makefile.in
c_pgmtk/examples/parPNLTest/: Makefile.in
c_pgmtk/examples/testLIMID/: Makefile.in
c_pgmtk/examples/testSL/: Makefile.am  Makefile.in  testSEM.cpp  testSL.cpp  testSL.dsp  testSL_DBN.cpp
c_pgmtk/examples/testSoftMax/: Makefile.in
c_pgmtk/examples/trial/: Makefile.in
c_pgmtk/examples/use_matrix/: Makefile.in
c_pgmtk/include/: Makefile.am  Makefile.in  Makefile.sh  ParPNLCRTDBG.H  dbginfo.h  memtrack.h  pnl1_5SliceInferenceEngine.hpp  pnl1_5SliceJtreeInferenceEngine.hpp  pnl2DBitwiseMatrix.hpp  pnl2DNumericDenseMatrix.hpp  pnl2TBNInferenceEngine.hpp  pnl2TPFInferenceEngine.hpp  pnlAllocator.hpp  pnlBKInferenceEngine.hpp  pnlBNet.hpp  pnlBayesLearningEngine.hpp  pnlBicLearningEngine.hpp  pnlCPD.hpp  pnlConfig.h  pnlConfig.hpp  pnlContext.hpp  pnlContextLoad.hpp  pnlContextPersistence.hpp  pnlContextSave.hpp  pnlDAG.hpp  pnlDBN.hpp  pnlDenseMatrix.hpp  pnlDiagnostics.hpp  pnlDynamicGraphicalModel.hpp  pnlDynamicInferenceEngine.hpp  pnlDynamicLearningEngine.hpp  pnlEmLearningEngine.hpp  pnlEmLearningEngineDBN.hpp  pnlError.h  pnlEvidence.hpp  pnlExInferenceEngine.hpp  pnlExampleModels.hpp  pnlException.hpp  pnlFGSumMaxInferenceEngine.hpp  pnlFactor.hpp  (+84 more)
c_pgmtk/src/: Makefile.am  Makefile.in  Makefile.sh  cvcart.cpp  cvsvd.c  dbginfo.cpp  memtrack.cpp  pnl1_5SliceInferenceEngine.cpp  pnl1_5SliceJtreeInferenceEngine.cpp  pnl2DBitwiseMatrix.cpp  pnl2DNumericDenseMatrix.cpp  pnl2TBNInferenceEngine.cpp  pnl2TPFInferenceEngine.cpp  pnlAllocator.cpp  pnlBKInferenceEngine.cpp  pnlBNet.cpp  pnlBayesLearningEngine.cpp  pnlBicLearningEngine.cpp  pnlCPD.cpp  pnlCondFunctionalDistribFun.cpp  pnlCondGaussianDistribFun.cpp  pnlCondSoftMaxDistribFun.cpp  pnlConfig.cpp  pnlContext.cpp  pnlContextLoad.cpp  pnlContextPersistence.cpp  pnlContextSave.cpp  pnlCoverage.cpp  pnlCreateParameter.cpp  pnlCreateParameters.cpp  pnlCreateStaticModel.cpp  pnlDAG.cpp  pnlDBN.cpp  pnlDenseMatrix.cpp  pnlDiagnostics.cpp  pnlDistribFun.cpp  pnlDynamicGraphicalModel.cpp  pnlDynamicInferenceEngine.cpp  pnlDynamicLearningEngine.cpp  pnlEmLearningEngine.cpp  (+98 more)
c_pgmtk/src/include/: Makefile.am  Makefile.in  Makefile.sh  config.in  cvsvd.h  pnlCondFunctionalDistribFun.hpp  pnlCondGaussianDistribFun.hpp  pnlCondSoftMaxDistribFun.hpp  pnlCoverage.hpp  pnlDistribFun.hpp  pnlFunction.hpp  pnlFunctionalCPD.hpp  pnlFunctionalDistribFun.hpp  pnlFunctionalPotential.hpp  pnlGaussianDistribFun.hpp  pnlImpDefs.hpp  pnlMixtureFunctionalCPD.hpp  pnlRng.hpp  pnlScalarDistribFun.hpp  pnlSoftMaxDistribFun.hpp  pnlTabularDistribFun.hpp  pnlTreeDistribFun.hpp  pnli2DNumericDenseMatrix.hpp  pnliNumericDenseMatrix.hpp  pnliNumericSparseMatrix.hpp  pnlpCondFunctionalDistribFun.hpp  pnlpFunctionalCPD.hpp  pnlpFunctionalDistribFun.hpp  pnlpFunctionalPotential.hpp  pnlpMixtureFunctionalCPD.hpp
c_pgmtk/tests/src/: A1_5JTreeInfDBNCondGauss.cpp  A2TPFInfDBN.cpp  AAnnealingGibbsInfEng.cpp  ABKInfDBN.cpp  ABKInfUsingClusters.cpp  ABayesParameterLearning.cpp  AComputeLikelihood.cpp  ACondGaussian.cpp  ACondSoftMaxAndSoftMax.cpp  AConditionalGaussianLearning.cpp  ADSeparation.cpp  ADetermineDistrType.cpp  AExInfEngine.cpp  AExLearnEngine.cpp  AFactorGraph.cpp  AGaussianFactorOperations.cpp  AGaussianInference.cpp  AGaussianMRF2.cpp  AGaussianParameterLearning.cpp  AGeneralInference.cpp  AGenerateEvidences.cpp  AGetParametersTest.cpp  AGibbsInfEngine.cpp  AGraph.cpp  AInfForRndBNet.cpp  AJTreeInfDBN.cpp  AJtreeInfMixtureDBN.cpp  ALIMIDInfEngine.cpp  ALog.cpp  (+58 more)
high/examples/: AddDeleteNodes.pnl  ContinuosEvidence.pnl  Makefile.am  Makefile.in  Makefile.sh  MultiGaussian.pnl  Numeration.pnl  SLDataRPS.csv  TopolSort.pnl  TopolSort2.pnl  bnet0.xml  checkSL.pnl  console.cpp  console.hpp  example_common_funs.cpp  example_common_funs.hpp  examples.dsp  gaussian.pnl  rps.cpp  rpsCreate.pnl  rpsLearn.csv  script_lex.cpp  script_lex.hpp  scripting.pnl  testSetP.pnl
high/include/: BNet.hpp  BNetCB.hpp  DBN.hpp  DBNCB.hpp  LIMID.hpp  LIMIDCB.hpp  MRF.hpp  MRFCB.hpp  Makefile.am  Makefile.in  Makefile.sh  ModelEngine.hpp  NetCallBack.hpp  PersistNodeDiagInfo.hpp  PersistProbNet.hpp  PersistWBNet.hpp  PersistWNodeInfo.hpp  PersistWTypes.hpp  TokenCover.hpp  Tokens.hpp  WCliques.hpp  WCover.hpp  WDistribFun.hpp  WInner.hpp  Wcsv.hpp  pnlHigh.hpp  pnlHighConf.hpp  pnlTok.hpp  pnlWDistributions.hpp  pnlWEvidence.hpp  pnlWGraph.hpp  pnlWProbabilisticNet.hpp
high/source/: BNet.cpp  BNetCB.cpp  DBN.cpp  DBNCB.cpp  LIMID.cpp  LIMIDCB.cpp  MRF.cpp  MRFCB.cpp  Makefile.am  Makefile.in  Makefile.sh  ModelEngine.cpp  NetCallBack.cpp  PersistNodeDiagInfo.cpp  PersistProbNet.cpp  PersistWBNet.cpp  PersistWNodeInfo.cpp  PersistWTypes.cpp  TokenCover.cpp  Tokens.cpp  WCliques.cpp  WCover.cpp  WDistribFun.cpp  WInner.cpp  Wcsv.cpp  pnlTok.cpp  pnlWDistributions.cpp  pnlWEvidence.cpp  pnlWGraph.cpp  pnlWProbabilisticNet.cpp
high/tests/: Makefile.am  Makefile.in  Makefile.sh  Test.cpp  TestCommon.cpp  TestCondGaussian.cpp  TestGaussianBNet.cpp  TestLimid.cpp  TestMRF.cpp  TestMain.cpp  TestNumeration.cpp  TestPnlHigh.hpp  TestSoftMax.cpp  TestsDBN.cpp  pigs.xml  random15.xml  random20.xml  random25.xml  test_conf.hpp  tests.dsp  tsys.cpp
trs/src/: Makefile.am  Makefile.in  trsapi.c  trserror.c  trsread.c
(+1094 files in other folders)
