dnl Process this file with autoconf to produce a configure script.
AC_INIT([pnl],[0.2.23],[])
dnl AC_CONFIG_HEADER(c_pgmtk/src/include/config.h:c_pgmtk/src/include/config.in)

dnl Set various version strings
PNLMAJOR=0
PNLMINOR=2
PNLSUBMINOR=23
INTERFACE_AGE=0
BINARY_AGE=0
DEBUG=
VERSION=$PNLMAJOR.$PNLMINOR.$PNLSUBMINOR

AC_SUBST(am__configure_deps)
AC_SUBST(PNLMAJOR)
AC_SUBST(PNLMINOR)
AC_SUBST(PNLSUBMINOR)
AC_SUBST(INTERFACE_AGE)
AC_SUBST(BINARY_AGE)
AC_SUBST(VERSION)
AC_SUBST(DEBUG)

dnl Directories, compiler options, ...

dnl Checks for programs
AC_CANONICAL_TARGET
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

dnl libtool section
LT_RELEASE=$PNLMAJOR.$PNLMINOR
LT_CURRENT=`expr $PNLSUBMINOR - $INTERFACE_AGE`
LT_REVISION=$INTERFACE_AGE
LT_AGE=`expr $BINARY_AGE - $INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AC_EXEEXT
AC_OBJEXT
# C/C++

dnl Checks for header files.

dnl Automake support

AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

AC_CONFIG_FILES([Makefile
cxcore/Makefile
cxcore/cxcore/Makefile
cxcore/cxcore/src/Makefile
cxcore/cxcore/include/Makefile
trs/Makefile
trs/src/Makefile
trs/include/Makefile
c_pgmtk/Makefile
c_pgmtk/src/Makefile
c_pgmtk/src/include/Makefile
c_pgmtk/include/Makefile
c_pgmtk/examples/Makefile
c_pgmtk/examples/linux_test/Makefile
c_pgmtk/examples/testSL/Makefile
c_pgmtk/examples/use_matrix/Makefile
c_pgmtk/examples/use_matrix/src/Makefile
c_pgmtk/examples/Data/Makefile
c_pgmtk/examples/ex_inf_learn_dbn/Makefile
c_pgmtk/examples/ex_param/Makefile
c_pgmtk/examples/gibbs/Makefile
c_pgmtk/examples/inf_learn_bnet/Makefile
c_pgmtk/examples/learn_param/Makefile
c_pgmtk/examples/mixture_gaussian_bnet/Makefile
c_pgmtk/examples/trial/Makefile
c_pgmtk/examples/ex_inf_learn_dbn/src/Makefile
c_pgmtk/examples/ex_param/Src/Makefile
c_pgmtk/examples/gibbs/Src/Makefile
c_pgmtk/examples/inf_learn_bnet/Src/Makefile
c_pgmtk/examples/learn_param/src/Makefile
c_pgmtk/examples/mixture_gaussian_bnet/Src/Makefile
c_pgmtk/examples/trial/Src/Makefile
c_pgmtk/examples/parPNLTest/Makefile
c_pgmtk/examples/parPNLTest/src/Makefile
c_pgmtk/examples/parPNLTest/include/Makefile
c_pgmtk/examples/testLIMID/Makefile
c_pgmtk/examples/testLIMID/src/Makefile
c_pgmtk/examples/testLIMID/include/Makefile
c_pgmtk/examples/testSoftMax/Makefile
c_pgmtk/examples/testSoftMax/src/Makefile
c_pgmtk/examples/testSoftMax/include/Makefile
c_pgmtk/tests/Makefile
c_pgmtk/tests/src/Makefile
c_pgmtk/tests/include/Makefile
c_pgmtk/tests/testdata/Makefile
doc/Makefile
high/Makefile
high/source/Makefile
high/include/Makefile
high/examples/Makefile
high/tests/Makefile
high/doc/Makefile
])
AC_OUTPUT
