
SUBDIRS = Data ex_inf_learn_dbn ex_param gibbs inf_learn_bnet learn_param \
          linux_test mixture_gaussian_bnet parPNLTest testLIMID testSL \
          testSoftMax trial use_matrix

pnlexamplesdir = $(prefix)/examples

nobase_pnlexamples_DATA =      \
     Data/alarm.dat     \
     Data/cases     \
     Data/casesArHMM     \
     Data/casesForWS     \
     Data/cases_gaussian     \
     Data/casesTab     \
     Data/kjaerulff.dat     \
     Data/samplesFoWS     \
     ex_inf_learn_dbn/src/inf_learn_dbn.cpp     \
     ex_param/Src/pEvidence.cpp     \
     ex_param/Src/pParameterForMNet.cpp     \
     gibbs/Src/gibbs.cpp     \
     inf_learn_bnet/Src/inf_learn_bnet.cpp     \
     learn_param/src/learn_param.cpp     \
     linux_test/test_run.cpp     \
     mixture_gaussian_bnet/Src/mixture_gaussian_bnet.cpp     \
     parPNLTest/include/CreateBNets.h     \
     parPNLTest/include/LoadBNet.h     \
     parPNLTest/src/CreateBNets.cpp     \
     parPNLTest/src/LoadBNet.cpp     \
     parPNLTest/src/parPNLTest.cpp     \
     testLIMID/include/LoadIDNet.h     \
     testLIMID/include/SamplesOfIDNet.h     \
     testLIMID/src/LoadIDNet.cpp     \
     testLIMID/src/SamplesOfIDNet.cpp     \
     testLIMID/src/TestLIMID.cpp     \
     testSL/testSEM.cpp     \
     testSL/testSL.cpp     \
     testSL/testSL_DBN.cpp     \
     testSoftMax/include/SamplesOfSMNet.h     \
     testSoftMax/src/SamplesOfSMNet.cpp     \
     testSoftMax/src/TestSoftMax.cpp     \
     trial/Src/classes_view.cpp     \
     use_matrix/src/umatrix2.cpp
