EXTRA_DIST =

include_HEADERS =      \
     ParPNLCRTDBG.H     \
     dbginfo.h     \
     memtrack.h     \
     pnl1_5SliceInferenceEngine.hpp     \
     pnl1_5SliceJtreeInferenceEngine.hpp     \
     pnl2DBitwiseMatrix.hpp     \
     pnl2DNumericDenseMatrix.hpp     \
     pnl2TBNInferenceEngine.hpp     \
     pnl2TPFInferenceEngine.hpp     \
     pnlAllocator.hpp     \
     pnlBKInferenceEngine.hpp     \
     pnlBNet.hpp     \
     pnlBayesLearningEngine.hpp     \
     pnlBicLearningEngine.hpp     \
     pnlCPD.hpp     \
     pnlConfig.h     \
     pnlConfig.hpp     \
     pnlContext.hpp     \
     pnlContextLoad.hpp     \
     pnlContextPersistence.hpp     \
     pnlContextSave.hpp     \
     pnlDAG.hpp     \
     pnlDBN.hpp     \
     pnlDenseMatrix.hpp     \
     pnlDiagnostics.hpp     \
     pnlDynamicGraphicalModel.hpp     \
     pnlDynamicInferenceEngine.hpp     \
     pnlDynamicLearningEngine.hpp     \
     pnlEmLearningEngine.hpp     \
     pnlEmLearningEngineDBN.hpp     \
     pnlError.h     \
     pnlEvidence.hpp     \
     pnlExInferenceEngine.hpp     \
     pnlExampleModels.hpp     \
     pnlException.hpp     \
     pnlFGSumMaxInferenceEngine.hpp     \
     pnlFactor.hpp     \
     pnlFactorGraph.hpp     \
     pnlFactors.hpp     \
     pnlFakePtr.hpp     \
     pnlGaussianCPD.hpp     \
     pnlGaussianPotential.hpp     \
     pnlGibbsSamplingInferenceEngine.hpp     \
     pnlGibbsWithAnnealingInferenceEngine.hpp     \
     pnlGraph.hpp     \
     pnlGraphicalModel.hpp     \
     pnlGroup.hpp     \
     pnlIDNet.hpp     \
     pnlIDPotential.hpp     \
     pnlIDTabularPotential.hpp     \
     pnlInferenceEngine.hpp     \
     pnlJtreeInferenceEngine.hpp     \
     pnlJunctionTree.hpp     \
     pnlLIMIDInfEngine.hpp     \
     pnlLWSamplingInferenceEngine.hpp     \
     pnlLearningEngine.hpp     \
     pnlLog.hpp     \
     pnlLogDriver.hpp     \
     pnlLogMultiplexor.hpp     \
     pnlLogUsing.hpp     \
     pnlMNet.hpp     \
     pnlMRF2.hpp     \
     pnlMatrix.hpp     \
     pnlMatrixIterator.hpp     \
     pnlMixtureGaussianCPD.hpp     \
     pnlMlDynamicStructLearn.hpp     \
     pnlMlLearningEngine.hpp     \
     pnlMlStaticStructLearn.hpp     \
     pnlMlStaticStructLearnHC.hpp     \
     pnlModelDomain.hpp     \
     pnlModelTypes.hpp     \
     pnlMultiDMatrix.hpp     \
     pnlNaiveInferenceEngine.hpp     \
     pnlNodeType.hpp     \
     pnlNodeValues.hpp     \
     pnlNumericDenseMatrix.hpp     \
     pnlNumericMatrix.hpp     \
     pnlNumericSparseMatrix.hpp     \
     pnlObjHandler.hpp     \
     pnlObject.hpp     \
     pnlParConfig.hpp     \
     pnlParEmLearningEngine.hpp     \
     pnlParGibbsSamplingInferenceEngine.hpp     \
     pnlParJtreeInferenceEngine.hpp     \
     pnlParNewDelete.hpp     \
     pnlParPearlInferenceEngine.hpp     \
     pnlPearlInferenceEngine.hpp     \
     pnlPersistArray.hpp     \
     pnlPersistCPD.hpp     \
     pnlPersistCover.hpp     \
     pnlPersistDistribFun.hpp     \
     pnlPersistGraph.hpp     \
     pnlPersistModel.hpp     \
     pnlPersistModelDomain.hpp     \
     pnlPersistTypes.hpp     \
     pnlPersistence.hpp     \
     pnlPotential.hpp     \
     pnlReferenceCounter.hpp     \
     pnlRing.hpp     \
     pnlSamplingInferenceEngine.hpp     \
     pnlScalarPotential.hpp     \
     pnlSoftMaxCPD.hpp     \
     pnlSparseMatrix.hpp     \
     pnlSpecPearlInferenceEngine.hpp     \
     pnlStackMemProv.hpp     \
     pnlStaticGraphicalModel.hpp     \
     pnlStaticLearningEngine.hpp     \
     pnlStaticStructLearnSEM.hpp     \
     pnlString.hpp     \
     pnlTabularCPD.hpp     \
     pnlTabularPotential.hpp     \
     pnlTimer.hpp     \
     pnlTreeCPD.hpp     \
     pnlTypeDefs.hpp     \
     pnlVector.hpp     \
     pnlXMLContainer.hpp     \
     pnlXMLRead.hpp     \
     pnlXMLWrite.hpp     \
     pnl_dll.hpp     \
     pnlpnlType.hpp
