EXTRA_DIST = 

highincludedir = $(prefix)/high/include

nobase_highinclude_HEADERS =      \
     BNet.hpp     \
     BNetCB.hpp     \
     ModelEngine.hpp     \
     NetCallBack.hpp     \
     PersistWBNet.hpp     \
     PersistWNodeInfo.hpp     \
     TokenCover.hpp     \
     WCover.hpp     \
     WDistribFun.hpp     \
     WInner.hpp     \
     Wcsv.hpp     \
     pnlHigh.hpp     \
     pnlHighConf.hpp     \
     pnlTok.hpp     \
     pnlWDistributions.hpp     \
     pnlWEvidence.hpp     \
     pnlWGraph.hpp     \
     pnlWProbabilisticNet.hpp
