EXTRA_DIST = 

highincludedir = $(prefix)/high/include

nobase_highinclude_HEADERS =      \
     BNet.hpp     \
     BNetCB.hpp     \
     DBN.hpp     \
     DBNCB.hpp     \
     LIMID.hpp     \
     LIMIDCB.hpp     \
     MRF.hpp     \
     MRFCB.hpp     \
     ModelEngine.hpp     \
     NetCallBack.hpp     \
     PersistProbNet.hpp     \
     PersistWNodeInfo.hpp     \
     PersistWTypes.hpp     \
     TokenCover.hpp     \
     Tokens.hpp     \
     WCliques.hpp     \
     WCover.hpp     \
     WDistribFun.hpp     \
     WInner.hpp     \
     Wcsv.hpp     \
     pnlHigh.hpp     \
     pnlHighConf.hpp     \
     pnlTok.hpp     \
     pnlWDistributions.hpp     \
     pnlWEvidence.hpp     \
     pnlWGraph.hpp     \
     pnlWProbabilisticNet.hpp
