EXTRA_DIST = 

nobase_include_HEADERS =      \
     cart/cvcart.h     \
     cart/datadefs.h     \
     cart/inlines.h     \
     cvsvd.h     \
     pnlCondGaussianDistribFun.hpp     \
     pnlCondSoftMaxDistribFun.hpp     \
     pnlCoverage.hpp     \
     pnlDistribFun.hpp     \
     pnlGaussianDistribFun.hpp     \
     pnlImpDefs.hpp     \
     pnlRng.hpp     \
     pnlScalarDistribFun.hpp     \
     pnlSoftMaxDistribFun.hpp     \
     pnlTabularDistribFun.hpp     \
     pnlTreeDistribFun.hpp     \
     pnli2DNumericDenseMatrix.hpp     \
     pnliNumericDenseMatrix.hpp     \
     pnliNumericSparseMatrix.hpp
